--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,18 +21,24 @@ jobs:
       - name: Compile
         run: haxelib run lime build windows
 
+      - name: Make zip for release
+        shell: pwsh
+        run: | 
+          cd export\release\windows\bin
+          Compress-Archive -Path . -DestinationPath windows.zip
+
       - name: Upload Artifact
         if: ${{ success() }}
         uses: actions/upload-artifact@main
         with:
           name: windowsBuild
-          path: export\release\windows\bin\*
+          path: export\release\windows\bin\*.zip
           if-no-files-found: error      
   macOS:
     runs-on: macos-${{matrix.version}}
     strategy:
       matrix:
-        version: [11, 12, 13]
+        version: [12, 13]
     steps:
       - name: Checkout
         uses: actions/checkout@main
@@ -51,12 +57,17 @@ jobs:
       - name: Compile
         run: haxelib run lime build mac
 
+      - name: Make tar for relese
+        run: |
+          cd export/release/macos/bin
+          tar czf macOS${{matrix.version}}.tar .
+
       - name: Upload Artifact
         if: ${{ success() }}
         uses: actions/upload-artifact@main
         with:
           name: macOSBuild-${{matrix.version}}
-          path: export/release/macos/bin/*
+          path: export/release/macos/bin/*.tar
           if-no-files-found: error
   Android:
     runs-on: ubuntu-latest
@@ -136,7 +147,12 @@ jobs:
           cd export/release/ios/build/*-iphoneos
           mkdir Payload
           mv *.app Payload
-          zip -r NovaFlare Engine.ipa Payload
+          zip -r "NovaFlare Engine.ipa" Payload
+
+      - name: Make Zip For Release
+        run: |
+           cd export/release/ios/build/Release-iphoneos
+           zip "NovaFlare Engine.zip" "NovaFlare Engine.ipa"
 
       - name: Upload Artifact
         if: ${{ success() }}
@@ -193,14 +209,8 @@ jobs:
            path: /home/runner
       
       - name: Move iOS File
-        run: mv "/home/runner/NovaFlare Engine-release.ipa" "/home/runner/ios.ipa"
-      
-      - name: Download macOS11 Build
-        uses: actions/download-artifact@main
-        with:
-           name: macOSBuild-11
-           path: /home/runner
-        
+        run: mv "/home/runner/NovaFlare Engine.zip" "/home/runner/ios.zip"
+  
       - name: Download macOS12 Build
         uses: actions/download-artifact@main
         with:
@@ -212,7 +222,7 @@ jobs:
         with:
            name: macOSBuild-13
            path: /home/runner
-        
+
       - name: Download Windows Build
         uses: actions/download-artifact@main
         with:
@@ -223,9 +233,10 @@ jobs:
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: true
-          automatic_release_tag: "V1.1.3"
-          title: "V1.1.3"
+          prerelease: false
+          automatic_release_tag: "V1.1.4"
+          title: "V1.1.4"
           files: |
             /home/runner/*.apk
             /home/runner/*.zip
+            /home/runner/*.tar
